--- a/src/templates/crafting-system-manager.hbs
+++ b/src/templates/crafting-system-manager.hbs
@@ -2,7 +2,7 @@
 
     <aside class="sidebar directory flexcol">
 
-        <nav class="pages-list" aria-label="Journal Entry Table of Contents" data-tooltip-direction="RIGHT">
+        <nav class="pages-list" aria-label="Crafting Systems" data-tooltip-direction="RIGHT">
             <ul class="directory-list scrollable">
                 {{#each craftingSystems}}
                 <li class="directory-item level1">
