--- a/src/templates/partials/components-tab.hbs
+++ b/src/templates/partials/components-tab.hbs
@@ -2,7 +2,7 @@
     <p>
         Components are the items that are consumed and produced by the crafting activities in your system.
     </p>
-    <div class="fabricate-drop-zone" data-drop-trigger="createComponent">
+    <div class="fabricate-drop-zone fabricate-wide" data-drop-trigger="createComponent">
         <i class="fa-solid fa-plus" style="pointer-events: none"></i> Drop an item here to create a component
     </div>
     <table class="fabricate-item-table">
