--- a/src/templates/partials/recipes-tab.hbs
+++ b/src/templates/partials/recipes-tab.hbs
@@ -2,7 +2,7 @@
     <p>
         Recipes provide characters with the ability to repeatedly craft componentIds.
     </p>
-    <div class="fabricate-drop-zone" data-drop-trigger="createRecipe">
+    <div class="fabricate-drop-zone fabricate-wide" data-drop-trigger="createRecipe">
         <i class="fa-solid fa-plus" style="pointer-events: none"></i> Drop an item here to create a recipe
     </div>
     <table class="fabricate-item-table">
