--- a/src/templates/recipe-manager.hbs
+++ b/src/templates/recipe-manager.hbs
@@ -1,65 +1,172 @@
-<div class="fabricate-recipe-manager">
+<div class="journal-sheet-container fabricate-application recipe-manager">
 
-    <h2 class="fabricate-recipe-name">{{recipe.name}}</h2>
+    <aside class="sidebar directory">
 
-        <div class="fabricate-recipe-image">
-            <img src="{{recipe.imageUrl}}" />
-        </div>
+        <nav class="pages-list tabs" data-group="primary-tabs" aria-label="Recipe Elements">
+            <a class="item" data-tab="summary">
+                <i class="fa-solid fa-scroll"></i> {{localize "fabricate.RecipeManagerApp.summary.title"}}
+            </a>
+            <a class="item" data-tab="ingredients">
+                <i class="fa-solid fa-boxes-stacked"></i> {{localize "fabricate.RecipeManagerApp.ingredients.title"}}
+            </a>
+            <a class="item" data-tab="catalysts">
+                <i class="fa-solid fa-wand-sparkles"></i> {{localize "fabricate.RecipeManagerApp.catalysts.title"}}
+            </a>
+            <a class="item" data-tab="essences">
+                <i class="fa-solid fa-mortar-pestle"></i> {{localize "fabricate.RecipeManagerApp.essences.title"}}
+            </a>
+            <a class="item" data-tab="results">
+                <i class="fa-solid fa-arrow-up-from-bracket"></i> {{localize "fabricate.RecipeManagerApp.results.title"}}
+            </a>
+        </nav>
 
-        <div class="fabricate-recipe-essence-editor">
-            <h3>{{localize "fabricate.RecipeManagerApp.essences.title"}}</h3>
-            <p>{{localize "fabricate.RecipeManagerApp.essences.instructions"}}</p>
-            <div class="fabricate-inline-part-list">
-                {{#each recipe.essences}}
-                    <div class="fabricate-essence" data-tooltip="{{essence.tooltip}}" data-essence-id="{{essence.id}}" data-recipe-id="{{../recipe.id}}" data-action="editRecipeEssence">
-                        <span>{{amount}} <i class="{{essence.iconCode}}"></i> {{essence.name}}</span>
-                    </div>
-                {{/each}}
+    </aside>
+
+    <section class="journal-entry-content fabricate-recipe-editor" style="overflow: scroll;">
+
+        <div class="part-title">
+            <div class="part-image">
+                <img src="{{recipe.imageUrl}}"/>
             </div>
+            <h2 class="part-name">{{recipe.name}}</h2>
         </div>
 
-        <div class="fabricate-recipe-ingredients-editor">
-            <h3>{{localize "fabricate.RecipeManagerApp.ingredients.title"}}</h3>
-            <p>{{localize "fabricate.RecipeManagerApp.ingredients.instructions"}}</p>
-            <div class="fabricate-recipe-ingredient-options">
-                {{#each recipe.ingredientOptions.members}}
+        <div class="content">
+
+            <div class="tab" data-tab="summary" data-group="primary-tabs">
+                Summary
+            </div>
+
+            <div class="tab" data-tab="ingredients" data-group="primary-tabs">
+                <div class="fabricate-recipe-ingredients-editor">
+                    <h3>{{localize "fabricate.RecipeManagerApp.ingredients.title"}}</h3>
+                    <p>{{localize "fabricate.RecipeManagerApp.ingredients.instructions"}}</p>
+                    <div class="fabricate-recipe-ingredient-options">
+                        {{#each recipe.ingredients.choices}}
+                            <div class="fabricate-recipe-choice">
+                                <div class="fabricate-choice-id"><i class="fa-solid fa-passport"></i> Option {{id}}</div>
+                                <div class="fabricate-component-list">
+                                    {{#each value.units}}
+                                        <div class="fabricate-component"
+                                             data-component-id="{{part.id}}" data-option-id="{{../id}}" data-tooltip="{{part.name}}"
+                                             data-action="editRecipeIngredient">
+                                            <img src="{{part.imageUrl}}">
+                                            <div class="fabricate-info">
+                                                <span class="fabricate-detail">{{quantity}}</span>
+                                            </div>
+                                        </div>
+                                    {{/each}}
+                                    <div class="fabricate-component fabricate-drop-zone" data-option-id="{{id}}" data-drop-trigger="addComponentToIngredientOption">
+                                        <i class="fa-solid fa-plus"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        {{else}}
+                            <div class="fabricate-alert fabricate-warning">
+                                <p>{{localize "fabricate.RecipeManagerApp.ingredients.noneSet"}}</p>
+                            </div>
+                        {{/each}}
+                    </div>
+                    <div class="fabricate-add-recipe-ingredient-option">
+                        <div class="fabricate-drop-zone fabricate-wide" data-drop-trigger="addIngredientOption">
+                            <i class="fa-solid fa-plus"></i> {{localize "fabricate.RecipeManagerApp.ingredients.addCombinationOption"}}
+                        </div>
+                    </div>
+                    <div class="fabricate-available-components">
+                        <div class="fabricate-search">
+                            <label for="search"><i class="fas fa-search"></i></label>
+                            <input type="text" name="search" value="{{search.ingredients}}" autocomplete="off" data-search-id="availableIngredients" placeholder="{{localize "fabricate.RecipeManagerApp.ingredients.search"}}">
+                        </div>
+                        <div class="fabricate-component-list">
+                            {{#each system.components}}
+                                <div class="fabricate-component fabricate-draggable" draggable="true"
+                                     data-part-id="{{id}}"
+                                     data-tooltip="{{name}}">
+                                    <img src="{{imageUrl}}">
+                                </div>
+                            {{/each}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="tab" data-tab="catalysts" data-group="primary-tabs">
+                <div class="fabricate-recipe-catalyst-editor">
+                    <h3>{{localize "fabricate.RecipeManagerApp.catalysts.title"}}</h3>
+                    <p>{{localize "fabricate.RecipeManagerApp.catalysts.instructions"}}</p>
                     <div class="fabricate-component-list">
-                        {{#each units}}
-                            <div class="fabricate-component fabricate-component-salvage-choice" data-salvage-id="{{part.id}}" data-tooltip="{{part.name}}" data-recipe-id="{{../../recipe.id}}" data-action="editRecipeIngredient">
+                        {{#each recipe.catalysts.units}}
+                            <div class="fabricate-component fabricate-component-catalyst-choice" data-tooltip="{{part.name}}"
+                                 data-component-id="{{part.id}}" data-action="editRecipeCatalyst">
                                 <img src="{{part.imageUrl}}">
                                 <div class="fabricate-info">
                                     <span class="fabricate-detail">{{quantity}}</span>
                                 </div>
                             </div>
                         {{/each}}
+                        <div class="fabricate-add-catalyst">
+                            <i class="fa-solid fa-square-plus"></i>
+                            <p>{{localize "fabricate.RecipeManagerApp.catalysts.add"}}</p>
+                        </div>
                     </div>
-                {{/each}}
-                <div class="fabricate-add-recipe-ingredient-option">
-                    <i class="fa-solid fa-square-plus"></i>
                 </div>
             </div>
+
+            <div class="tab" data-tab="essences" data-group="primary-tabs">
+                <div class="fabricate-recipe-essence-editor">
+                    {{#if system.hasEssences}}
+                        <h3>{{localize "fabricate.RecipeManagerApp.essences.title"}}</h3>
+                        <p>{{localize "fabricate.RecipeManagerApp.essences.instructions"}}</p>
+                        <div class="fabricate-component-list">
+                            {{#each recipe.essences}}
+                                <div class="fabricate-essence" data-tooltip="{{part.tooltip}}" data-essence-id="{{part.id}}"
+                                     data-action="editRecipeEssence">
+                                    <span>{{quantity}} <i class="{{part.iconCode}}"></i> {{part.name}}</span>
+                                </div>
+                            {{/each}}
+                        </div>
+                    {{else}}
+                        <h3>{{localize "fabricate.RecipeManagerApp.essences.title"}}</h3>
+                        <p>{{localize "fabricate.RecipeManagerApp.essences.notAvailable"}}</p>
+                    {{/if}}
+                </div>
+            </div>
+
+            <div class="tab" data-tab="results" data-group="primary-tabs">
+                <div class="fabricate-recipe-results-editor">
+                    <h3>{{localize "fabricate.RecipeManagerApp.results.title"}}</h3>
+                    <p>{{localize "fabricate.RecipeManagerApp.results.instructions"}}</p>
+                    <div class="fabricate-recipe-result-options">
+                        {{#each recipe.results.choices}}
+                            <div class="fabricate-component-list">
+                                {{#each value.units}}
+                                    <div class="fabricate-component fabricate-component-salvage-choice"
+                                         data-component-id="{{part.id}}" data-option-id="{{../id}}"
+                                         data-tooltip="{{part.name}}" data-action="editRecipeResult">
+                                        <img src="{{part.imageUrl}}">
+                                        <div class="fabricate-info">
+                                            <span class="fabricate-detail">{{quantity}}</span>
+                                        </div>
+                                    </div>
+                                {{/each}}
+                            </div>
+                        {{else}}
+                            <div class="fabricate-recipe-no-ingredients">
+                                <p>{{localize "fabricate.RecipeManagerApp.results.noneSet"}}</p>
+                            </div>
+                        {{/each}}
+                        <div class="fabricate-add-recipe-result-option">
+                            <div class="fabricate-add-combination" data-drop-trigger="addResultOption">
+                                <i class="fa-solid fa-plus"></i>
+                            </div>
+                            <p>{{localize "fabricate.RecipeManagerApp.results.addCombinationOption"}}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
-    <div class="fabricate-recipe-results-editor">
-        <h3>{{localize "fabricate.RecipeManagerApp.results.title"}}</h3>
-        <p>{{localize "fabricate.RecipeManagerApp.results.instructions"}}</p>
-        <div class="fabricate-recipe-result-options">
-            {{#each recipe.resultOptions.members}}
-                <div class="fabricate-component-list">
-                    {{#each units}}
-                        <div class="fabricate-component fabricate-component-salvage-choice" data-salvage-id="{{part.id}}" data-tooltip="{{part.name}}" data-recipe-id="{{../../recipe.id}}" data-action="editReciperesult">
-                            <img src="{{part.imageUrl}}">
-                            <div class="fabricate-info">
-                                <span class="fabricate-detail">{{quantity}}</span>
-                            </div>
-                        </div>
-                    {{/each}}
-                </div>
-            {{/each}}
-            <div class="fabricate-add-recipe-result-option">
-                <i class="fa-solid fa-square-plus"></i>
-            </div>
-        </div>
-    </div>
+    </section>
 
 </div>
